--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -435,15 +435,16 @@ a.social-icon:active {
   }
 
   span {
-    font-size: 14px;
-    color:#000;
+    /*
     line-height: 26px;
-    font-weight: 400;
-    text-transform: uppercase;
     position: relative;
+	*/
+	font-size: 14px;
+    color:$heading-color;
+    text-transform: uppercase;
     font-family: $accent-1-font;
     letter-spacing: 2px;
-	opacity:.2;
+	opacity:.45;
   }
 }
 
